fixed js to add/remove visibility classes

--- a/includes/style.css
+++ b/includes/style.css
@@ -11,6 +11,10 @@ body{
 .hidden{
     display: none;
 }
+.hidden-animated{
+    display: none;
+    transform: scale(0);
+}
 
 /* mobile menu */
 .mobileMenu{
